--- a/map/map.html
+++ b/map/map.html
@@ -4,33 +4,11 @@
     <title>My Map Project</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <div id="map"></div>
-    <script>
-      // simple script that initializes the embedded Google Map
-      var map;
-      function initMap() {
-        // create new map centered in Troy, NY
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 42.7284, lng: -73.6918},
-          zoom: 8
-        });
-      }
-    </script>
+    <script src='scripts.js'></script>
     <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBt7wriqR8VrXXHiRmxaqWS_llDDZZlN74&callback=initMap'></script>
   </body>
 </html>
