Modified data code/cleaned up code

--- a/social_media/createAccount.html
+++ b/social_media/createAccount.html
@@ -4,8 +4,7 @@
     <title>Create Account</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="resources/styles.css"/>
-    <script type="text/javascript" src="login.js"></script>
-    <script type="text/javascript" src="resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
   </head>
 
   <body>
