--- a/social_media/index.html
+++ b/social_media/index.html
@@ -4,7 +4,7 @@
     <title>Social Media Home Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="resources/styles.css"/>
-    <script type="text/javascript" src="button.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
   </head>
 
   <body>      
@@ -17,7 +17,7 @@
 <h1 id="logoText" onclick="window.location.href='index.html';">Title of Social Media</h1>  <!-- Clickable logo leads to index page -->
 
 
-    <button onclick="create()" id="createButton" title="Create a New Post">+</button>   
+    <button onclick="window.location.href='add.html';" id="createButton" title="Create a New Post">+</button>   
   </body>
   
 </html>
