--- a/social_media/login.html
+++ b/social_media/login.html
@@ -4,7 +4,7 @@
     <title>Login</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" type="text/css" href="resources/styles.css"/>
-    <script type="text/javascript" src="login.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
   </head>
 
   <body>
