--- a/social_media/createAccount.html
+++ b/social_media/createAccount.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1 id="logoText" onclick="window.location.href='index.html';">Title of Social Media Platform</h1>  <!-- Clickable logo leads to index page -->
-      <form id="login" name="login" action="#" method="post" onsubmit="return add(this);">
+      <form id="login" name="login" action="#" method="post" onsubmit="return addUser(this);">
         <fieldset> 
           <legend>Create Account</legend>
           <div class="formData">
