--- a/social_media/login.html
+++ b/social_media/login.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1 id="logoText" onclick="window.location.href='index.html';">Title of Social Media Platform</h1>  <!-- Clickable logo leads to index page -->
-      <form id="login" name="login" action="#" method="post" onsubmit="return loginUser(this);">
+      <form id="login" name="login" method="post" >
         <fieldset> 
           <legend>Login</legend>
           <div class="formData">
@@ -21,7 +21,7 @@
             <label class="field" for="password">Password:</label>
             <div class="value"><input type="text" size="60" value="" name="password" id="password" autocomplete="off"/></div> <!-- Autocomplete is off to remove suggestions -->
     
-            <input type="submit" value="Login" id="save" name="save"/>
+            <input type="submit" value="Login"/>
           </div>
         </fieldset>
       </form>
